# tree-sitter-swarm_object

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-swarm_object.h  tree-sitter-swarm_object.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_swarm_object/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSwarmObjectTests/: TreeSitterSwarmObjectTests.swift
queries/: folds.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
