[package]
name = "tree-sitter-swarm-object"
description = "Swarm engine json-like object syntax"
version = "0.1.0"
authors = ["trepz"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "swarm-object"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/trepz/tree-sitter-swarm_object"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
